tests/regression/errors/basic/undefined_var_18.csd
// Undefined variable test 18
vibez.spill("Using undefined:", undefined_var_18)
sus result drip = missing_variable + 18
